--- a/index.css
+++ b/index.css
@@ -1,6 +1,15 @@
 h1 {
-  font-size: 4rem;
-  font-weight: bold;
-  color: #333;
-  text-align: center;
+    font-size: 4rem;
+    font-weight: bold;
+    color: #333;
+    text-align: center;
 }
+
+        #game-frame {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100vh;
+            outline: 2px solid black;
+        }
