--- a/index.css
+++ b/index.css
@@ -4,3 +4,12 @@ h1 {
     max-width: 80%; 
     margin: 0 auto; 
 }
+#game-frame {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    width: 80%;
+    height: 80vh;
+    margin: 0 auto;
+}
