--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@ h1 {
     margin: 0 auto;
     color: white; 
 }
+h2 {
+    color: white;
+}
 #game-frame {
     position: relative; /* Ensure the frame is positioned relative */
     display: flex;
@@ -18,8 +21,6 @@ h1 {
 body {
     background-color: black; 
 }
-
-
 button {
     width: 200px; /* Increase the button size */
     font-size: 2rem; /* Increase the button text size */
