--- a/game.css
+++ b/game.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/8bit-wonder');
+
 body {
     margin: 0;
     padding: 0;
@@ -28,21 +30,29 @@ body {
 #score {
     top: 5%;
     left: 1%;
+    font-family: '8BIT WONDER', sans-serif;
+    font-size: 2em;
 }
 
 #speed {
     top: 11%;
     left: 1%;
+    font-family: '8BIT WONDER', sans-serif;
+    font-size: 2em;
 }
 
 #time {
     top: 5%;
     right: 1%;
+    font-family: '8BIT WONDER', sans-serif;
+    font-size: 2em;
 }
 
 #position {
     top: 11%;
     right: 10px;
+    font-family: '8BIT WONDER', sans-serif;
+    font-size: 2em;
 }
 
 #logo {
