--- a/index.css
+++ b/index.css
@@ -21,7 +21,8 @@ h2 {
     margin: 0 auto;
 }
 body {
-    background-color: black; 
+    background-color: black; /* Change the background color to black
+
 }
 button {
     width: 200px; /* Increase the button size */
