--- a/index.css
+++ b/index.css
@@ -5,13 +5,16 @@ h1 {
     font-size: 4rem; 
     max-width: 80%; 
     margin: 0 auto;
-    color: white; 
+    color: black; 
+    color: white;
+    -webkit-text-stroke: 1px black;
     top: 30%;
     position: absolute;
     font-family: '8BIT WONDER', sans-serif;
 }
 h2 {
     color: white;
+    -webkit-text-stroke: 1px black;
     font-family: '8BIT WONDER', sans-serif;
 }
 #game-frame {
@@ -19,10 +22,11 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid white;
-    width: 90vw;
-    height: 90vh;
+    width: 95vw;
+    height: 98vh;
     margin: 0 auto;
+    background-image: url("Assets/pxArt.png");
+    background-size: cover;
 }
 body {
     background-color: black; /* Change the background color to black */
